crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_Peek_A_Boo_Poker_USA_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/Peek-A-Boo Poker (USA) (Unl).nes
rom_sha256=2a792283388fc2468e30fb67bce6254d5a9fd0f14d6d65378da2dc37fb55e279
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=9aecd4db715ee3f8
checkpoint f900 fb_fnv1a64=19a3cdcc4c8ec950
checkpoint f1100 fb_fnv1a64=d8b1248a69979e6e
