crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_Peek_A_Boo_Poker_USA_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/Peek-A-Boo Poker (USA) (Unl).zip
rom_sha256=243145dd2226e31c2cde52847d4b7a63c62ce87bbf4f54b69c74cafaff2c7bae
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=9aecd4db715ee3f8
checkpoint f900 fb_fnv1a64=19a3cdcc4c8ec950
checkpoint f1100 fb_fnv1a64=d8b1248a69979e6e
