crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_149_SachenSA0036_Taiwan_Mahjong_16_Sachen_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-149-SachenSA0036/Taiwan Mahjong 16 (Sachen) [!].zip
rom_sha256=fa8779aea655aacc492edd876e53f5f1b61e453f991ad0039292a35fbcbdc62c
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=703480354df3c12e
checkpoint f900 fb_fnv1a64=6ebecc81a3f3be4d
checkpoint f1100 fb_fnv1a64=0672a0bda2d9cc81
