crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_149_SachenSA0036_Taiwan_Mahjong_Tai_Wan_Ma_Que_16_Asia_Ja_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-149-SachenSA0036/Taiwan Mahjong - Tai Wan Ma Que 16 (Asia) (Ja) (Unl).nes
rom_sha256=a20f4b7a558912c89cdfb7d2f88c5c4f260a43dc92cf3dbd69733e276a19184e
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=703480354df3c12e
checkpoint f900 fb_fnv1a64=6ebecc81a3f3be4d
checkpoint f1100 fb_fnv1a64=0672a0bda2d9cc81
