crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Auto_Upturn_Asia_Ja_PAL_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Auto-Upturn (Asia) (Ja) (PAL) (Unl).zip
rom_sha256=7628699245925ef49a118028a58a97f971505976d5a7dcdf4799395dbb14113d
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=e31956bc6ef45813
checkpoint f900 fb_fnv1a64=41364b5fcdb41716
checkpoint f1100 fb_fnv1a64=41364b5fcdb41716
