crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Chess_Academy_Asia_Ja_NTSC_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Chess Academy (Asia) (Ja) (NTSC) (Unl).zip
rom_sha256=395ed0b23107c62e929f55db11fe98ffb8ba720e0ed28d25aa693c863493b5e9
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=8ec1c8032bc99773
checkpoint f900 fb_fnv1a64=e16ac63987898bc8
checkpoint f1100 fb_fnv1a64=e16ac63987898bc8
